--- a/site/public/login.html
+++ b/site/public/login.html
@@ -18,19 +18,21 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 
-    <link rel="stylesheet" href="./assets/css/login.css" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./css/login.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <head>
       <header>
         <a href="./index.html"
-          ><img src="./assets/img/login/home.png" alt="logo_img"
+          ><img src="./assets/img/login/home.png" alt="Caminho para a página home"
         /></a>
       </header>
       <section class="section">
         <div class="box">
-          <img src="./assets/img/logo/logo01.png" alt="logo" />
+          <h1>Login</h1>
+          <br><br>
+          <img src="./assets/img/logo/logo.png" alt="Logo" />
           <input type="text" placeholder="Email" id="ipt_email" />
           <input type="password" placeholder="Senha" id="ipt_senha" />
           <button class="btn-get-started scrollto" onclick="entrar()">
