--- a/site/public/dashboard/dashboardGerente.html
+++ b/site/public/dashboard/dashboardGerente.html
@@ -13,6 +13,8 @@
     <link rel="shortcut icon" href="../assets/img/logo/logo.png" type="image/x-icon"/>
 
     <title>Dashboard</title>
+    
+  <link rel="shortcut icon" href="../assets/img/logo/logo.png" type="image/x-icon" />
 
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
