Adição da tela de perfil do gerente e labes no login e cadastro

--- a/site/public/cadastro_empresa.html
+++ b/site/public/cadastro_empresa.html
@@ -45,7 +45,7 @@
             </div>
             <div class="info-line">
               <div class="input-block">
-                <h5>Nome Fantasia</h5>
+                <label for="ipt_nome_fantasia">Nome Fantasia</label>
                 <input
                   type="text"
                   name=""
@@ -54,7 +54,7 @@
                 />
               </div>
               <div class="input-block">
-                <h5>CNPJ</h5>
+                <label for="ipt_cnpj">CNPJ</label>
                 <input
                   type="text"
                   name=""
@@ -67,7 +67,7 @@
             </div>
             <div class="info-line">
               <div class="input-block">
-                <h5>CEP</h5>
+                <label for="ipt_cep">CEP</label>
                 <input
                   type="text"
                   name=""
@@ -78,7 +78,7 @@
                 />
               </div>
               <div class="input-block">
-                <h5>Email</h5>
+                <label for="ipt_email_empresa">Email</label>
                 <input
                   type="text"
                   name=""
@@ -96,7 +96,7 @@
             </div>
             <div class="info-line">
               <div class="input-block">
-                <h5>Nome Usuário</h5>
+                <label for="ipt_nome_usuario">Nome Usuário</label>
                 <input
                 type="text"
                 name=""
@@ -105,7 +105,7 @@
                 />
               </div>
               <div class="input-block">
-                <h5>Email Usuário</h5>
+                <label for="ipt_email_usuario">Email Usuário</label>
                 <input
                 type="text"
                 name=""
@@ -129,33 +129,3 @@
     </main>
   </body>
 </html>
-<script>
-
-// function Prosseguir(){
-
-//   var nome_empresa = ipt_nome_fantasia.value;
-//   var cnpj = ipt_cnpj.value;
-//   var cep = ipt_cep.value;
-//   var email_empresa = ipt_email_empresa.value;
-
-//   if(nome_empresa != "" && cnpj != "" && cep != "" && email_empresa != ""){
-//     var parteEmpresa = document.getElementById("ParteEmpresa");
-//     parteEmpresa.style.display = "none";
-
-//     var btnParteEmpresa = document.getElementById("btn_ParteEmpresa");
-//     btnParteEmpresa.style.display = "none";
-
-//     var pParteEmpresa = document.getElementById("caminho_login");
-//     pParteEmpresa.style.display = "none";
-    
-
-//     var cadastroFuncionario = document.getElementById("cadastroFuncionario");
-//     cadastroFuncionario.style.display = "flex";
-
-
-//     var btncadastroFuncionario = document.getElementById("btn_cadastroFuncionario");
-//     btncadastroFuncionario.style.display = "flex";
-//   }
-// }
-
-</script>
