--- a/site/public/login.html
+++ b/site/public/login.html
@@ -33,8 +33,17 @@
           <h1>Login</h1>
           <br><br>
           <img src="./assets/img/logo/logo.png" alt="Logo" />
-          <input type="text" placeholder="Email" id="ipt_email" />
-          <input type="password" placeholder="Senha" id="ipt_senha" />
+     
+          <div class="campos-login">
+            <label for="ipt_email">Email</label>
+            <input type="text" placeholder="Email" id="ipt_email" />
+          </div>
+
+          <div class="campos-login">
+            <label for="ipt_senha">Senha</label>
+           <input type="password" placeholder="Senha" id="ipt_senha" />
+          </div>
+
           <button class="btn-get-started scrollto" onclick="entrar()">
             Entrar
           </button>
